Home Page fully complete

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,3 +3,13 @@
   margin: 0 auto;
   /* padding: 5rem; */
 }
+
+input {
+  background-color: transparent;
+  color: black;
+}
+
+input:focus {
+  outline: none;
+  background-color: transparent;
+}
