--- a/frontend/src/pages/styles/GetStartedPage.css
+++ b/frontend/src/pages/styles/GetStartedPage.css
@@ -144,4 +144,9 @@
         padding: 8px;
         font-size: 14px;
     }
+
+    button {
+        padding: 8px;
+        font-size: 14px;
+    }
 }
