--- a/frontend/src/pages/styles/HomePage.css
+++ b/frontend/src/pages/styles/HomePage.css
@@ -1,69 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: "Roboto", sans-serif;
-    background-color: #f5f5f5;
-}
-
-.app {
-    display: flex;
-    height: 100vh;
-}
-
-.main-content {
-    flex: 1;
-    padding: 20px 40px;
-    background-color: #f5f5f5;
-    /* background-color: #1e1e2d; */
-    width: 80%;
-    height: 100vh;
-    /* color: #f5f5f5; */
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 30px;
-}
-
-.search-bar {
-    display: flex;
-    align-items: center;
-    background-color: white;
-    border-radius: 20px;
-    padding: 10px 20px;
-    width: 300px;
-}
-
-.search-bar input {
-    border: none;
-    margin-left: 10px;
-    font-size: 16px;
-    width: 100%;
-}
-
-.user-profile {
-    width: 50px;
-    height: 50px;
-    background-color: #1e1e2d;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-}
-
 .action-cards {
     display: flex;
     gap: 20px;
     margin-bottom: 30px;
+}
+
+.action-cards-rooms {
+    display: flex;
+    gap: 20px;
+    flex: 1;
 }
 
 .action-card,
@@ -77,7 +21,6 @@ body {
     flex-direction: column;
     justify-content: space-between;
 }
-
 .action-card {
     background-color: #1e1e2d;
     color: white;
@@ -108,7 +51,7 @@ body {
     background-color: #4caf50;
     color: white;
     width: 30%;
-    position: absolute;
+    position: relative;
     right: 25px;
     background-image: url("https://images.unsplash.com/photo-1415604934674-561df9abf539?q=80&w=1380&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-size: 55%;
@@ -136,10 +79,6 @@ body {
 .date-time-card .calendar-icon {
     position: relative;
     z-index: 1;
-}
-
-.date-time-card h3 {
-    font-size: 24px;
 }
 
 .date-time-card p {
@@ -184,14 +123,21 @@ body {
 
 .see-all {
     color: #1e1e2d;
-    font-size: 16px;
+    font-size: 14px;
     float: right;
     margin-top: 10px;
 }
 
-.group-cards {
+/* .group-cards {
     display: flex;
     gap: 15px;
+    overflow-x: auto;
+    padding-bottom: 20px;
+} */
+
+.group-cards-new {
+    display: flex;
+    gap: 10px;
     overflow-x: auto;
     padding-bottom: 20px;
 }
@@ -227,54 +173,8 @@ body {
 
 /* Media Queries for Responsiveness */
 @media screen and (max-width: 768px) {
-    .app {
-        flex-direction: column;
-    }
-
-    .main-content {
-        width: 100%;
-        padding: 20px;
-    }
-
-    .sidebar {
-        position: fixed;
-        top: 0;
-        left: -250px;
-        height: 100vh;
-        width: 250px;
-        background-color: #1e1e2d;
-        transition: left 0.3s ease-in-out;
-        z-index: 1000;
-    }
-
-    .sidebar.open {
-        left: 0;
-    }
-
-    .hamburger {
-        display: block;
-        position: fixed;
-        top: 10px;
-        left: 10px;
-        z-index: 1001;
-    }
-
-    .header {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .search-bar {
-        width: 100%;
-        margin-bottom: 20px;
-    }
-
-    .user-profile {
-        align-self: flex-end;
-    }
-
     .action-cards {
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
 
     .action-card {
@@ -286,25 +186,9 @@ body {
         position: relative;
         right: 0px;
     }
-
-    .group-cards {
-        flex-direction: column;
-    }
-
-    .group-card {
-        width: 100%;
-    }
 }
 
 @media screen and (max-width: 480px) {
-    .main-content {
-        padding: 10px;
-    }
-
-    .public-rooms h2 {
-        font-size: 20px;
-    }
-
     .subjects h3 {
         font-size: 16px;
     }
@@ -315,14 +199,6 @@ body {
 
     .see-all {
         font-size: 14px;
-    }
-
-    .group-card h3 {
-        font-size: 18px;
-    }
-
-    .group-card p {
-        font-size: 12px;
     }
 
     .group-card button {
