Logout, Excalidraw integrtation

--- a/frontend/src/pages/styles/Room.css
+++ b/frontend/src/pages/styles/Room.css
@@ -27,13 +27,13 @@ body {
   overflow: hidden;
 }
 
-.header {
+/* .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 30px;
   width: 100%;
-}
+} */
 
 .search-bar {
   display: flex;
