--- a/frontend/src/components/LandingPageComponents.css
+++ b/frontend/src/components/LandingPageComponents.css
@@ -80,9 +80,15 @@
 .section-header {
     padding-top: 12px;
     text-align: center;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    padding-left: 100px;
+    padding-right: 100px;
+    font-weight: 600;
+    font-size: 30px;
+}
+
+.section-header-2 {
+    padding-top: 35px;
+    text-align: center;
     font-weight: 600;
     font-size: 30px;
 }
